<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:text="@string/set_time"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/hourInput"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            android:hint="@string/hours"
            android:layout_margin="8dp"
            android:gravity="center"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/minuteInput"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            android:hint="@string/minutes"
            android:layout_margin="8dp"
            android:gravity="center"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/secondInput"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            android:hint="@string/seconds"
            android:layout_margin="8dp"
            android:gravity="center"
            android:textSize="16sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/getTimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:text="@string/set"
        android:padding="12dp"
        android:textSize="16sp"/>

</LinearLayout>